adjusted code for empty inputs